// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "default",
      "className": "css-0",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "default",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.block: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": true,
      "children": "properties.block: true",
      "className": "css-0",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.block: true",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.color: #9c27b0 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.color: #9c27b0",
      "className": "css-2tuiwk",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.color: #9c27b0",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.danger: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.danger: true",
      "className": "css-0",
      "danger": true,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.danger: true",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabled: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.disabled: true",
      "className": "css-0",
      "danger": undefined,
      "disabled": true,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.disabled: true",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.ghost: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.ghost: true",
      "className": "css-0",
      "danger": undefined,
      "disabled": undefined,
      "ghost": true,
      "href": undefined,
      "icon": undefined,
      "id": "properties.ghost: true",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.hideTitle: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "",
      "className": "css-0",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": <IconBlock
        actions={Object {}}
        blockId="properties.hideTitle: true_icon"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [Function],
            "registerAction": [Function],
            "registerMethod": [Function],
          }
        }
        properties="DeleteOutlined"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.hideTitle: true",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.href: www.lowdefy.com - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.href: www.lowdefy.com",
      "className": "css-0",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": "https://www.lowdefy.com",
      "icon": undefined,
      "id": "properties.href: www.lowdefy.com",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.icon object - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.icon object",
      "className": "css-0",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": <IconBlock
        actions={Object {}}
        blockId="properties.icon object_icon"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [Function],
            "registerAction": [Function],
            "registerMethod": [Function],
          }
        }
        properties={
          Object {
            "color": "red",
            "name": "SaveOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon object",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.icon string - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.icon string",
      "className": "css-0",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": <IconBlock
        actions={Object {}}
        blockId="properties.icon string_icon"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [Function],
            "registerAction": [Function],
            "registerMethod": [Function],
          }
        }
        properties="SaveOutlined"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon string",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.shape: circle - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.shape: circle",
      "className": "css-0",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.shape: circle",
      "loading": undefined,
      "onClick": [Function],
      "shape": "circle",
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.shape: round - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.shape: round",
      "className": "css-0",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.shape: round",
      "loading": undefined,
      "onClick": [Function],
      "shape": "round",
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: large - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.size: large",
      "className": "css-0",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.size: large",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": "large",
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: small - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.size: small",
      "className": "css-0",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.size: small",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": "small",
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "Button title",
      "className": "css-0",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.title",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: danger - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.type: danger",
      "className": "css-0",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.type: danger",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "danger",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: dashed - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.type: dashed",
      "className": "css-0",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.type: dashed",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "dashed",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.type: default",
      "className": "css-0",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.type: default",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "default",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: link - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.type: link",
      "className": "css-0",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.type: link",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "link",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: text - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.type: text",
      "className": "css-0",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.type: text",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "text",
    },
    Object {},
  ],
]
`;
